# Price-is-Right

./: .gitignore  README.md  main.py  pyproject.toml
baseline/: neural_network.py
baseline models/: human_baseline.py  traditional_ML.py
fine_tuning/: test_result.py  training.py
frontend/: README.md
frontend/react-ui/: index.html
frontend/react-ui/src/: App.jsx  styles.css
products_vectorstore/: chroma.sqlite3
src/: backend_server.py
src/agents/: neural_network_agent.py
src/backend/: deal_agent_framework.py
src/pricer/: batch.py
src/scripts/: deploy.py  evaluate_llms.py  making_prompts.py  preprocess.py  run_modal.py  train_ML.py  train_neural.py
support/: pricer_ephemeral.py  pricer_service2.py
test/: test_ensembleAgent.py  test_messageAgent.py  test_planningAgents.py  test_scannerAgent.py  testing_specialistAgent.py
