[project]
name = "llm-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "groq>=1.0.0",
    "litellm>=1.81.14",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
